--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "wait-for-expect": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
